--- a/styles/index.css
+++ b/styles/index.css
@@ -5,12 +5,17 @@
     box-sizing: border-box;
 }
 
-#mapComponent
-{
-    width: 90vw;
-    height: 85vh;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
+.center {
+    position: fixed;
+    top: 5px;
+    left: 15px;
+    right: 15px;
+    bottom: 5px;
+    padding: 15px;
+  }
+  
+  #map {
+    width: 100%;
+    height: 100%;
+  }
+  
